fix the calendar

--- a/Pages/Manager/GenerateBills.cshtml
+++ b/Pages/Manager/GenerateBills.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/Manager/GenerateBills"
 @model Apartment.Pages.Manager.GenerateBillsModel
+@using System.Globalization
 @{
     ViewData["Title"] = "Generate Monthly Bills";
     Layout = "_Layout";
